Fixing font on mobile

--- a/style.css
+++ b/style.css
@@ -272,10 +272,6 @@ p, h1{
 
 /*Mobiles*/
 @media screen and (max-width:480px){
-    .top-bar{
-        padding-left: 25px;
-        padding-right: 25px;
-    }
     .section{
         height: fit-content;
         margin-bottom: 75px;
